Working code before I continue doing nonsense

--- a/App.razor
+++ b/App.razor
@@ -1,4 +1,5 @@
 ﻿@using MedbaseComponents
+@using MedbaseComponents.Pages
 @using MedbaseComponents.Controls
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly"
