--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -2,6 +2,7 @@
 @page "/home"
 @using MedbaseComponents.Models;
 @using MedbaseComponents.Services;
+@using MudBlazor
 @inject NavigationManager navManager;
 @inject IApiRepository repository
 
