--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,14 +7,15 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MedbaseBlazor
-@using MedbaseBlazor.Shared
 @using MedbaseBlazor.Pages.Admin
 @using MedbaseBlazor.Pages.User
+@using MedbaseBlazor.Shared
 @using MudBlazor
 @using MedbaseComponents
 @using MedbaseComponents.Models
 @using MedbaseComponents.Services
 @using MedbaseComponents.Controls
 @using MedbaseComponents.Pages.User
+@using MedbaseComponents.Pages
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
