--- a/Pages/User/CoursesPage.razor
+++ b/Pages/User/CoursesPage.razor
@@ -44,57 +44,18 @@
 
 <div class="container">
 
-    @if (!CoursesList.Any())
-    {
-        <LoadingComponent />
-    }
-    else
-    {
-        <div class="row pt-5">
-            @foreach (Course item in CoursesList)
-            {
-                <div class="col-6 col-lg-4 col-sm-6 mb-5">
-                    <MudCard @onclick="() => GoToTopics(item.CourseRef)">
-                        <MudCardMedia Image="@item.ImageURL" Height="300" />
-                        <MudCardContent>
-                            <MudText Typo="Typo.h6">
-                                @item.Title
-                            </MudText>
-                            <MudText Typo="Typo.body2" Class="d-lg-block d-none">
-                                @item.Description
-                            </MudText>
-                        </MudCardContent>
-                    </MudCard>
-                </div>
-
-            }
-        </div>
-        
-    }
+    <Courses />
+    
 </div>
 
 @code {
-    private IEnumerable<Course> CoursesList { get; set; } = Enumerable.Empty<Course>();
-
-
     private string description = "Choose the course you want to view notes or MCQs on";
     private string title = "Courses | Medbase";
     private string image = "https://i.postimg.cc/T1DjN4S5/Logo.png";
-
 
     private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
     {
         new BreadcrumbItem("Home", href: "#", icon: Icons.Material.Filled.Home),
         new BreadcrumbItem("Courses", href: "/courses", icon: Icons.Material.Filled.Book)
     };
-
-
-
-    protected override Task OnInitializedAsync() => GetArticlesAsync();
-
-    private async Task GetArticlesAsync() => CoursesList = await repository.GetCourses();
-    private void GoToTopics(string courseRef)
-    {
-        navManager.NavigateTo($"/topics/{courseRef}");
-    }
 }
