--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
+    <link href="~/css/mdstyles.css" rel="stylesheet"/>
 
     <!--WhatsApp Metas-->
     <meta property="og:site_name" content="Medbase">
