--- a/Pages/Admin/Editors/QuestionsEditor.razor
+++ b/Pages/Admin/Editors/QuestionsEditor.razor
@@ -5,7 +5,7 @@
 @inject IApiRepository repository
 @inject ISnackbar Snackbar
 @inject NavigationManager navManager
-@using MedbaseComponents.Models
+@using MedbaseLibrary.Models
 @using MedbaseBlazor.Pages.Admin.Utilities
 @using Markdig
 
