--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @page "/home"
-@using MedbaseComponents.Models;
-@using MedbaseComponents.Services;
+@using MedbaseLibrary.Models;
+@using MedbaseLibrary.Services;
 @using MudBlazor
 @inject NavigationManager navManager;
 @inject IApiRepository repository
