--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -9,10 +9,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
-    <link href="~/css/mdstyles.css" rel="stylesheet"/>
+
+    <link href="_content/MedbaseComponents/wwwroot/css/mdstyles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/MedbaseComponents/wwwroot/css/common.css" />
+    <link href="css/site.css" rel="stylesheet" />
 
     <!--WhatsApp Metas-->
     <meta property="og:site_name" content="Medbase">
