--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@using MedbaseComponents.MsalClient
+﻿@using MedbaseLibrary.MsalClient
 @using Microsoft.Identity.Client
 @using Microsoft.Extensions.Configuration
 @inherits LayoutComponentBase
