--- a/_Imports.razor
+++ b/_Imports.razor
@@ -12,8 +12,8 @@
 @using MedbaseBlazor.Shared
 @using MudBlazor
 @using MedbaseComponents
-@using MedbaseComponents.Models
-@using MedbaseComponents.Services
+@using MedbaseLibrary.Models
+@using MedbaseLibrary.Services
 @using MedbaseComponents.Controls
 @using MedbaseComponents.Pages.User
 @using MedbaseComponents.Pages
