--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,8 +2,7 @@
 @using Microsoft.Identity.Client
 @using Microsoft.Extensions.Configuration
 @inherits LayoutComponentBase
-@inject IPCAWrapper _pcaWrapper
-@inject IConfiguration _configuration
+@using Microsoft.AspNetCore.Components.Authorization
 
 <PageTitle>Medbase | Medical School MCQs</PageTitle>
 
@@ -29,6 +28,17 @@
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <MudNavMenu Rounded="true" Margin="Margin.Dense" Color="Color.Primary" Class="pa-2">
 
+            <AuthorizeView>
+                <Authorized>
+                    <MudNavLink Icon="@Icons.Material.Filled.Logout">Logout</MudNavLink>
+                </Authorized>
+                <NotAuthorized>
+                    <MudNavLink Icon="@Icons.Material.Filled.Login" Href="/signin">Sign In</MudNavLink>
+                    <MudNavLink Icon="@Icons.Material.Filled.Login" Href="/signup">Sign Up</MudNavLink>
+                </NotAuthorized>
+            </AuthorizeView>
+            
+
             <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">Home</MudNavLink>
             <MudNavLink Href="/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
             <MudNavLink Href="/notes" Icon="@Icons.Material.Filled.Note">Notes</MudNavLink>
@@ -38,14 +48,6 @@
             <MudNavLink Href="/about" Icon="@Icons.Material.Filled.QuestionAnswer">About & Contact</MudNavLink>
 
             <MudDivider />
-            @if (IsLoggedIn)
-            {
-                <MudNavLink Icon="@Icons.Material.Filled.Logout" OnClick="() => OnLogoutClicked()">Logout</MudNavLink>
-            }
-            else
-            {
-                <MudNavLink Icon="@Icons.Material.Filled.Login" OnClick="() => OnLoginClicked()">Login</MudNavLink>
-            }
             <MudDivider />
 
             <MudNavLink OnClick="ThemeToggle" Icon="@(_isDarkMode == true ? Icons.Material.Filled.DarkMode : Icons.Material.Filled.LightMode)">
@@ -79,6 +81,10 @@
     </footer>
 </MudLayout>
 @code {
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; }
+
+
     bool _drawerOpen = true;
     private MudThemeProvider _mudThemeProvider;
     private bool _isDarkMode;
@@ -117,64 +123,5 @@
     {
         _isDarkMode = newValue;
         StateHasChanged();
-    }
-
-
-    bool _isLoggedIn = false;
-    public bool IsLoggedIn
-    {
-        get => _isLoggedIn;
-        set
-        {
-            if (_isLoggedIn == value) return;
-            _isLoggedIn = value;
-            InvokeAsync(StateHasChanged);
-        }
-    }
-
-    private async void OnLoginClicked()
-    {
-        IsLoggedIn = false;
-
-        try
-        {
-            // Attempt silent login, and obtain access token.
-            var result = await _pcaWrapper.AcquireTokenSilentAsync(_pcaWrapper.Scopes).ConfigureAwait(false);
-
-            // Set access token.
-            GlobalValues.AccessToken = result?.AccessToken;
-            if (GlobalValues.AccessToken != null)
-                IsLoggedIn = true;
-
-        }
-        // A MsalUiRequiredException will be thrown, if this is the first attempt to login, or after logging out.
-        catch (MsalUiRequiredException)
-        {
-            try
-            {
-                // Perform interactive login, and obtain access token.
-                var result = await _pcaWrapper.AcquireTokenInteractiveAsync(_pcaWrapper?.Scopes).ConfigureAwait(false);
-
-                // Set access token.
-                GlobalValues.AccessToken = result?.AccessToken;
-                if (GlobalValues.AccessToken != null)
-                    IsLoggedIn = true;
-            }
-            catch (Exception ex)
-            {
-                // Ignore.
-            }
-        }
-        catch
-        {
-            IsLoggedIn = false;
-        }
-    }
-
-    private async void OnLogoutClicked()
-    {
-        await _pcaWrapper.SignOutAsync().ConfigureAwait(false);
-        IsLoggedIn = false;
-        GlobalValues.AccessToken = null;
     }
 }
