--- a/_Imports.razor
+++ b/_Imports.razor
@@ -19,3 +19,4 @@
 @using MedbaseComponents.Pages
 @using PSC.Blazor.Components.MarkdownEditor
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
+@using Blazored.LocalStorage
